style: changed Dockerfile to follow best practices

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.8-slim
+LABEL VERSION=1.0
+LABEL NAME=app
 ENV PYTHONUNBUFFERED=1
-RUN mkdir /var/www
-COPY requirements.txt /var/www/
-RUN cd /var/www && \
-    python3 -m pip install -r requirements.txt
+COPY requirements.txt .
+RUN python3 -m pip install -r requirements.txt
 COPY app.py .
-ENTRYPOINT ["gunicorn", "app:app", "--bind=0.0.0.0:8000", "--workers=4", "--log-level=debug", "--reload"]
+EXPOSE 8000
+ENTRYPOINT ["gunicorn", "app:app", "--bind=0.0.0.0:8000", "--workers=4", "--reload"]
+CMD ["--log-level=info"]
